force-app/main/default/objects/Maltreatment_Allegation__c/Maltreatment_Allegation__c.object-meta.xml
<CustomObject>
    <label>Maltreatment Allegation</label>
    <nameField>
        <label>Maltreatment Allegation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maltreatment Allegations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>