force-app/main/default/objects/Maltreatment_Allegation__c/fields/Accordion_Label__c.field-meta.xml
<CustomField>
    <fullName>Accordion_Label__c</fullName>
    <formula>&apos;VICTIM NAME: &apos;+ Child__r.FirstName +&apos; &apos;+ Child__r.LastName +&apos; | MALTREATMENT TYPE: &apos;+ TEXT( Abuse_Types__c )+ &apos; | ALLEGED MALTREATOR: &apos;+ Alleged_Maltreator__r.FirstName+&apos; &apos;+Alleged_Maltreator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accordion Label</label>
    <type>Text</type>
</CustomField>