force-app/main/default/objects/Maltreatment_Allegation__c/fields/Alleged_Maltreator__c.field-meta.xml
<CustomField>
    <fullName>Alleged_Maltreator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alleged Maltreator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Maltreatment Allegations (Alleged Maltreator)</relationshipLabel>
    <relationshipName>Maltreatment_Allegations1</relationshipName>
    <type>Lookup</type>
</CustomField>