force-app/main/default/objects/Maltreatment_Allegation__c/fields/Area_of_injuries__c.field-meta.xml
<CustomField>
    <fullName>Area_of_injuries__c</fullName>
    <label>Area of injuries</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abdomen</fullName>
            </value>
            <value>
                <fullName>Arm</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
            <value>
                <fullName>Brain</fullName>
            </value>
            <value>
                <fullName>Breast</fullName>
            </value>
            <value>
                <fullName>Buttocks</fullName>
            </value>
            <value>
                <fullName>Calf</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Ears</fullName>
            </value>
            <value>
                <fullName>Eyes</fullName>
            </value>
            <value>
                <fullName>Face</fullName>
            </value>
            <value>
                <fullName>Fingers</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Forearm</fullName>
            </value>
            <value>
                <fullName>Full Body</fullName>
            </value>
            <value>
                <fullName>Genitals</fullName>
            </value>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Head</fullName>
            </value>
            <value>
                <fullName>Hip</fullName>
            </value>
            <value>
                <fullName>Internal Injury</fullName>
            </value>
            <value>
                <fullName>Leg</fullName>
            </value>
            <value>
                <fullName>Mouth</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Nose</fullName>
            </value>
            <value>
                <fullName>Palm</fullName>
            </value>
            <value>
                <fullName>Rectum-Anus</fullName>
            </value>
            <value>
                <fullName>Ribs</fullName>
            </value>
            <value>
                <fullName>Shin</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
            <value>
                <fullName>Skull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>