force-app/main/default/objects/Maltreatment_Allegation__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Maltreatment Allegations</relationshipLabel>
    <relationshipName>Maltreatment_Allegations</relationshipName>
    <type>Lookup</type>
</CustomField>