force-app/main/default/objects/Maltreatment_Allegation__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>IF(This_maltreatment_is_not_applicable__c, false , NOT(AND(ISBLANK( Date_of_Incident__c ), ISBLANK(Maltreatment_Characteristics_Comments__c)) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>