force-app/main/default/objects/Maltreatment_Allegation__c/fields/Contributing_factor_in_the_fatality__c.field-meta.xml
<CustomField>
    <fullName>Contributing_factor_in_the_fatality__c</fullName>
    <label>Contributing factor in the fatality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>