force-app/main/default/objects/Maltreatment_Allegation__c/fields/Date_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incident__c</fullName>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Date of Incident</label>
    <type>DateTime</type>
</CustomField>