force-app/main/default/objects/Maltreatment_Allegation__c/fields/Injury_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Injury_Characteristics__c</fullName>
    <label>Injury Characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrasions-Lacerations</fullName>
            </value>
            <value>
                <fullName>Bone Fracture (Not Skill)</fullName>
            </value>
            <value>
                <fullName>Brain Damage</fullName>
            </value>
            <value>
                <fullName>Bruises-Welts</fullName>
            </value>
            <value>
                <fullName>Burns</fullName>
            </value>
            <value>
                <fullName>Child Born Drug Exposed</fullName>
            </value>
            <value>
                <fullName>Cuts</fullName>
            </value>
            <value>
                <fullName>Gunshot</fullName>
            </value>
            <value>
                <fullName>Pain</fullName>
            </value>
            <value>
                <fullName>Scratches</fullName>
            </value>
            <value>
                <fullName>Self-mutilation</fullName>
            </value>
            <value>
                <fullName>Stabbing</fullName>
            </value>
            <value>
                <fullName>Slap and Scars</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Dismemberment</fullName>
            </value>
            <value>
                <fullName>Exposure - Freezing-Heat</fullName>
            </value>
            <value>
                <fullName>Failure to Thrive</fullName>
            </value>
            <value>
                <fullName>Fetal Alcohol Syndrome</fullName>
            </value>
            <value>
                <fullName>Head Trauma</fullName>
            </value>
            <value>
                <fullName>Internal Injuries</fullName>
            </value>
            <value>
                <fullName>Malnutrition</fullName>
            </value>
            <value>
                <fullName>Mental Trauma</fullName>
            </value>
            <value>
                <fullName>None Apparent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rectal Injury-Irregularities</fullName>
            </value>
            <value>
                <fullName>Retinal Haemorrhage</fullName>
            </value>
            <value>
                <fullName>Sexually Transmitted Diseases</fullName>
            </value>
            <value>
                <fullName>Shaken Baby Syndrome</fullName>
            </value>
            <value>
                <fullName>Skull Fracture</fullName>
            </value>
            <value>
                <fullName>Sprains-Dislocations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>