force-app/main/default/objects/Maltreatment_Allegation__c/fields/Injury_Characteristics_Comments__c.field-meta.xml
<CustomField>
    <fullName>Injury_Characteristics_Comments__c</fullName>
    <label>Injury Characteristics Comments</label>
    <type>TextArea</type>
</CustomField>