force-app/main/default/objects/Maltreatment_Allegation__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>Investigation__c</referenceTo>
    <relationshipLabel>Maltreatment Allegations</relationshipLabel>
    <relationshipName>Maltreatment_Allegations</relationshipName>
    <type>Lookup</type>
</CustomField>