force-app/main/default/objects/Maltreatment_Allegation__c/fields/Is_another_jurisdiction_assisting__c.field-meta.xml
<CustomField>
    <fullName>Is_another_jurisdiction_assisting__c</fullName>
    <label>Is another jurisdiction assisting?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>