force-app/main/default/objects/Maltreatment_Allegation__c/fields/Maltreatment_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Maltreatment_Characteristics__c</fullName>
    <label>Maltreatment Characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol Abuse - Child</fullName>
            </value>
            <value>
                <fullName>Alcohol Abuse - Caretaker</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
            <value>
                <fullName>Age Inappropriate Sexual Behavior</fullName>
            </value>
            <value>
                <fullName>Anal Penetration through intercourse</fullName>
            </value>
            <value>
                <fullName>Anal Penetration through instrumentation</fullName>
            </value>
            <value>
                <fullName>Pinching</fullName>
            </value>
            <value>
                <fullName>Self-mutilation</fullName>
            </value>
            <value>
                <fullName>Stabbing</fullName>
            </value>
            <value>
                <fullName>None Apparent</fullName>
            </value>
            <value>
                <fullName>Dirty House</fullName>
            </value>
            <value>
                <fullName>Substance Abuse</fullName>
            </value>
            <value>
                <fullName>Alcohol Use - Caretaker</fullName>
            </value>
            <value>
                <fullName>Alcohol Use - Child</fullName>
            </value>
            <value>
                <fullName>Bestiality</fullName>
            </value>
            <value>
                <fullName>Biting</fullName>
            </value>
            <value>
                <fullName>Bizarre Sex Practices</fullName>
            </value>
            <value>
                <fullName>Burning</fullName>
            </value>
            <value>
                <fullName>Child Critical - Near Fatality</fullName>
            </value>
            <value>
                <fullName>Child enticed to expose self</fullName>
            </value>
            <value>
                <fullName>Child enticed to masturbate</fullName>
            </value>
            <value>
                <fullName>Child Fatality</fullName>
            </value>
            <value>
                <fullName>Confinement</fullName>
            </value>
            <value>
                <fullName>Cruel Restraint</fullName>
            </value>
            <value>
                <fullName>Cutting</fullName>
            </value>
            <value>
                <fullName>Diagnosed Mental Illness-Child</fullName>
            </value>
            <value>
                <fullName>Diagnosed Mental lIlness-Caregiver</fullName>
            </value>
            <value>
                <fullName>Diagnosed Mental Retardation-Child</fullName>
            </value>
            <value>
                <fullName>Diagnosed Mental Retardation-Parent</fullName>
            </value>
            <value>
                <fullName>Digital Anal Penetration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>