force-app/main/default/objects/Maltreatment_Allegation__c/fields/Maltreatment_Characteristics_Comments__c.field-meta.xml
<CustomField>
    <fullName>Maltreatment_Characteristics_Comments__c</fullName>
    <label>Maltreatment Characteristics Comments</label>
    <type>TextArea</type>
</CustomField>