force-app/main/default/objects/Maltreatment_Allegation__c/fields/Provider_Involved_Maltreatment__c.field-meta.xml
<CustomField>
    <fullName>Provider_Involved_Maltreatment__c</fullName>
    <label>Provider Involved Maltreatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>