force-app/main/default/objects/Maltreatment_Allegation__c/fields/This_maltreatment_is_not_applicable__c.field-meta.xml
<CustomField>
    <fullName>This_maltreatment_is_not_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This maltreatment is not applicable</inlineHelpText>
    <label>This maltreatment is not applicable</label>
    <type>Checkbox</type>
</CustomField>