force-app/main/default/objects/Maltreatment_Allegation__c/fields/Time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Incident__c</fullName>
    <label>Time of Incident</label>
    <type>Time</type>
</CustomField>